fix: [CDNG-9247]: scrollbar (#3647)

--- a/src/modules/75-cd/components/PipelineSteps/K8sServiceSpec/K8sServiceSpec.module.scss
+++ b/src/modules/75-cd/components/PipelineSteps/K8sServiceSpec/K8sServiceSpec.module.scss
@@ -74,7 +74,7 @@
   border: solid 1px #ccc;
   width: 400px;
   max-height: 200px;
-  overflow: scroll;
+  overflow: auto;
   :global {
     .icon-container {
       display: none;
